--- a/cdc.html
+++ b/cdc.html
@@ -1,42 +1,45 @@
+
 <!DOCTYPE html>
 <html>
-
-		<head>
-		<meta charset="UTF-8">
-		<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-		<link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-		<link rel="icon" href="logo.png" />
-		<link rel="stylesheet" href="style.css">
-		</head>
+	
+	<head>
+    <meta charset="UTF-8">
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+	<link rel="icon" href="logo.png" />
+    <link rel="stylesheet" href="Style.css">
+	</head>
 
 <body>
 
-	<div class="nav">
-		<div class="container">
-			<ul class="nav nav-tabs">
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="robot.html">Robot</a></li>
-			<li><a href="program.html">Programmation</a></li>
-			<li><a href="logo.html">Animation 3D</a></li>
-			<li><a href="tarif.html">Tarifs</a></li>
-			<li><a href="contact.html">Contactez-Nous</a></li>
-			<li><a href="dons.html">Dons</a></li>
-			<li><a href="technoroi.html">Techno Roi</a></li>
-			<li><a href="forms.html">Formulaires</a></li>
-			<li><a href="concours.html">Concours</a><li>
-			<li><a href="https://twitter.com/technorois"target="_blank"><image src="twitter1.png" </img></a></li>
-			</ul>
+<div class="nav">
+      <div class="container">
+        <ul class="nav nav-tabs">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="robot.html">Robot</a></li>
+		  <li><a href="program.html">Programmation</a></li>
+          <li><a href="logo.html">Animation 3D</a></li>
+          <li><a href="tarif.html">Tarifs</a></li>
+          <li><a href="contact.html">Contactez-Nous</a></li>
+          <li><a href="dons.html">Dons</a></li>
+          <li><a href="technoroi.html">Techno Roi</a></li>
+		  <li><a href="forms.html">Formulaires</a></li>
+		  <li><a href="concours.html">Concours</a><li>
+		  <li><a href="https://twitter.com/technorois"target="_blank"><image src="twitter1.png" </img></a></li>
+        </ul>
 	</div>
 </div>
 
 <div class="a">
 	<div class="container">
-		<h2>Choix de cours</h2>
+			<h2>Choix de cours</h2>
 		<p>Remplissez ce formulaire pour que nous puissions savoir à quel cours vous allez participer!</p>
 		<iframe src="https://docs.google.com/a/ecolecatholique.ca/forms/d/1hUftNTmST3BJqUqEMEmJHf5mTImKlzPBM0K0gU1WcFI/viewform?embedded=true" width="1200" height="1300" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
 		
-
 	</div>
 </div>
-  </body>
+
+
+
+</body>
 </html>
