--- a/note.html
+++ b/note.html
@@ -1,42 +1,68 @@
+
 <!DOCTYPE html>
 <html>
 
-		<head>
-		<meta charset="UTF-8">
-		<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-		<link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-		<link rel="icon" href="logo.png" />
-		<link rel="stylesheet" href="style.css">
-		</head>
+  <head>
+      <meta charset="UTF-8">
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
 
-<body>
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+	<link rel="icon" href="logo.png" />
+    <link rel="stylesheet" href="Style.css">
 
-<div class="nav">
-	<div class="container">
-			<ul class="nav nav-tabs">
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="robot.html">Robot</a></li>
-			<li><a href="program.html">Programmation</a></li>
-			<li><a href="logo.html">Animation 3D</a></li>
-			<li><a href="tarif.html">Tarifs</a></li>
-			<li><a href="contact.html">Contactez-Nous</a></li>
-			<li><a href="dons.html">Dons</a></li>
-			<li><a href="technoroi.html">Techno Roi</a></li>
-			<li><a href="forms.html">Formulaires</a></li>
-			<li><a href="concours.html">Concours</a><li>
-			<li><a href="https://twitter.com/technorois"target="_blank"><image src="twitter1.png" </img></a></li>
-			</ul>
+  </head>
+
+  <body>
+
+
+  <div class="nav">
+      <div class="container">
+        <ul class="nav nav-tabs">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="robot.html">Robot</a></li>
+		  <li><a href="program.html">Programmation</a></li>
+          <li><a href="logo.html">Animation 3D</a></li>
+          <li><a href="tarif.html">Tarifs</a></li>
+          <li><a href="contact.html">Contactez-Nous</a></li>
+          <li><a href="dons.html">Dons</a></li>
+          <li><a href="technoroi.html">Techno Roi</a></li>
+		  <li><a href="forms.html">Formulaires</a></li>
+		  <li><a href="concours.html">Concours</a><li>
+		  <li><a href="https://twitter.com/technorois"target="_blank"><image src="twitter1.png" </img></a></li>
+		</ul>
 	</div>
-</div>
-
+ </div>
+		
 <div class="a">
+	<div class="container">
+      <h2>Cours</h2>
+      <p>Vous aimez programmer, construire au créer des logos? Nous avons tout ce qu'il vous faut! Nous pouvons donner des cours de robotique ou création de logos!</p>
+	  
+	  <div class="col-md-4"
+	  <div class="thumbnail">
+      <image src="ev3_robot_1.jpg" </img>
+	  </div>
+	  
+	   <div class="col-md-4" 
+	   <div class="thumbnail">
+       <image src="nxt_robot_2.jpg" </img>
+	   </div>
+		
+	 <div class="col-md-4"
+	 <div class="thumbnail">
+       <image src="ev3_robot_3.jpg" </img>
+       </div>	
+	</div>
+</div>				
+		
+<div class="b">
 	<div class="container">
 		<h2>Note</h2>
 		<p>Nous voulons savoir comment vous avez aimer notre cours! Alors remplissez le formulaire ci-dessous!</p>
 		<iframe src="https://docs.google.com/forms/d/1lYjor_bFXU3SwP60T8M3yk4WWnm3UnUFMYVcuoqoIEU/viewform?embedded=true" width="1200" height="1750" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
-	</div>
+
+
+	</div>		
 </div>
-
-
-  </body>
+	</body>
 </html>
