--- a/concours.html
+++ b/concours.html
@@ -37,7 +37,7 @@
 		<p>Les concours sont de durées limités et il faut avoir une adresse courriel, un nom de famille, un prénom et d'autres choses selon les différents concours!</p>
 		<h2>Concours de logo</h2>
 		<p>Le premier concours est un concours de logo! Il faut faire un logo pour Techno Rois. Un jury decidera le gagnant les 3 premiers gagnerons un prix! Le premier logo sera affiché sur le site web!</p>
-		<p>Pour participer au concours cliquez sur le <a href="https://goo.gl/STpwTb"target="_blank">lien!</a></p>          
+		<p>Pour participer au concours cliquez sur le <a href="https://goo.gl/xRzwmq"target="_blank">lien!</a></p>          
         
 	</div>
 </div>
