--- a/logo.html
+++ b/logo.html
@@ -32,7 +32,7 @@
 <div class="a">
 	<div class="container">
 		<h2>Animation 3D</h2>
-		<p>Vous voulez apprendre a faire de l'animation 3d? Dans ce cours vous apprenderez comment faire des logos et des intros de vidéos! De plus vous apprendrez a faire de l'animation 3d tels que des personnages qui se déplacent!</p>
+		<p>Vous voulez apprendre a faire de l'animation 3d? Dans ce cours vous apprenderez comment faire des logos et des intros de vidéos! De plus vous apprendrez a faire de l'animation 3d tels que des textes qui se déplacent!</p>
 		<h2>Que faut il savoir?</h2>
 		<p>Rien! Avoir une passion pour l'animation 3d!</a>!</p>
 	</div>
