--- a/concours.html
+++ b/concours.html
@@ -36,7 +36,7 @@
 		<h2>Que faut il savoir?</h2>
 		<p>Les concours sont de durées limités et il faut avoir une adresse courriel, un nom de famille, un prénom et d'autres choses selon les différents concours!</p>
 		<h2>Concours de logo</h2>
-		<p>Le premier concours est un concours de logo! Il faut faire un logo pour Techno Rois. Un jury decidera le gagnant les 3 premiers gagnerons un prix! Le premier logo sera affiché sur le site web!</p>
+		<p>Le premier concours est un concours de logo! Il faut faire une animation 3D pour Techno Rois. Un jury decidera le gagnant les 3 premiers gagnerons un prix! Le premier logo sera affiché sur le site web!</p>
 		<p>Pour participer au concours cliquez sur le <a href="#/target="_blank">lien. Bientot!</a></p>          
         
 	</div>
