--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 
 	</div>		
 </div>
+
+<div class="ad">
+	<p>techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois</p>
+</div>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
