--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 </div>
 
 <div class="ad">
+	<div class="container">
 	<p>techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois</p>
+	</div>
 </div>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
