--- a/index.html
+++ b/index.html
@@ -63,15 +63,12 @@
 			<h2>Logos</h2>
 			<p>Vous aimez créer des logos, faire des intros et des outros de vidéos ou meme faire des petit dessins grace a un ordinateur? Ce cours est pour vous! Cela va vous permettre d'avoir une base avec plusieurs logiciels d'animations!</p>
 
+<h4>techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois</h4>
 
 	</div>		
 </div>
 
-<div class="ad">
-	<div class="container">
-	<p>techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois techno rois</p>
-	</div>
-</div>
+
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
