--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <div class="a">
 	<div class="container">
 		<h2>Contactez-nous</h2>
-		<li><p>Par courriel : technorois@gmail.com</p></li>
+		<li><p>Par courriel : <a href="mailto:technorois@gmail.com">technorois@gmail.com</a></p></li>
 		<li><p>Sur Twitter : technorois ou @technorois</p></li>
 		<p>Pour toutes questions envoyez-nous un courriel, un message sur twitter ou un message sur google+. De plus tout les courriels/messages twitter serons lus et repondus d'ici les 2 jours qui suivent (De 8h30 jusqu'à 21h30!)</p>
 		<table>
