--- a/concours.html
+++ b/concours.html
@@ -38,7 +38,7 @@
 		<h2>Concours de logo</h2>
 		<p>Le premier concours est un concours de logo! Il faut faire une animation 3D pour Techno Rois. Un jury decidera le gagnant les 3 premiers gagnerons un prix! Le premier logo sera affiché sur le site web!</p>
 		<p>Pour participer au concours regardez plus bas</p>         
-		<iframe frameborder="0" style="position:absolute;height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/virtualoffice4257/form/Concours/formperma/C1CGEB7geF25381K8C37fE411'/>
+		<a href='https://forms.zohopublic.com/virtualoffice4257/form/Concours/formperma/C1CGEB7geF25381K8C37fE411' title="Concours" target='_blank'>faites le formulaire!</a>
         
 	</div>
 </div>
