--- a/concours.html
+++ b/concours.html
@@ -37,9 +37,9 @@
 		<p>Les concours sont de durées limités et il faut avoir une adresse courriel, un nom de famille, un prénom et d'autres choses selon les différents concours!</p>
 		<h2>Concours de logo</h2>
 		<p>Le premier concours est un concours de logo! Il faut faire une animation 3D pour Techno Rois. Un jury decidera le gagnant les 3 premiers gagnerons un prix! Le premier logo sera affiché sur le site web!</p>
-		<p>Pour participer au concours regardez plus bas</p>         
-		<a href='https://forms.zohopublic.com/virtualoffice4257/form/Concours/formperma/C1CGEB7geF25381K8C37fE411' title="Concours" target='_blank'>faites le formulaire!</a>
-        
+		<p>Pour participer au concours cliquez sur ce <a href='https://forms.zohopublic.com/virtualoffice4257/form/Concours/formperma/C1CGEB7geF25381K8C37fE411' title="Concours" target='_blank'>lien!</a>
+</p>         
+		        
 	</div>
 </div>
 
