--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<p>Vous voulez apprendre a programmer? Prenez ce cours pour pouvoir faire un site simple sur le sujet de votre choix! Apprenez la base du HTML et peut-être du CSS! Cela va vous permettre de commencer a programmer et de pouvoir devenir meilleur!</p>
 			<h2>Logos</h2>
 			<p>Vous aimez créer des logos, faire des intros et des outros de vidéos ou meme faire des petit dessins grace a un ordinateur? Ce cours est pour vous! Cela va vous permettre d'avoir une base avec plusieurs logiciels d'animations!</p>
-			<h3></h3>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h3>
+			<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
 	
 	</div>		
 </div>
