--- a/concours.html
+++ b/concours.html
@@ -43,6 +43,11 @@
 	</div>
 </div>
 
+div class="b">
+	<div class="container">
+	<4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</4>
+	</div>
+</div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
