--- a/forms.html
+++ b/forms.html
@@ -38,6 +38,12 @@
 	</div>
 </div>
 
+div class="b">
+	<div class="container">
+	<4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</4>
+	</div>
+</div>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
