--- a/technoroi.html
+++ b/technoroi.html
@@ -41,6 +41,14 @@
 	</div>
 </div>
 
+<div class="b">
+	<div class="container">
+
+<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
+
+	</div>
+</div>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
