--- a/tarif.html
+++ b/tarif.html
@@ -39,6 +39,13 @@
 	</div>
 </div>
 
+<div class="a">
+	<div class="container">
+		<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
+
+	</div>
+</div>
+
 
 
 <script>
