--- a/note.html
+++ b/note.html
@@ -42,6 +42,12 @@
        </div>	
 </div>
 			
+<div class="b">
+	<div class="container">
+<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
+	
+	</div>		
+</div>
 		
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
