--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
 div class="b">
 	<div class="container">
-	<4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</4>
+	<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
 	</div>
 </div>
 
