--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 	</div>
 </div>
 
-div class="b">
+<div class="b">
 	<div class="container">
 	<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
 	</div>
