--- a/dons.html
+++ b/dons.html
@@ -38,7 +38,7 @@
 	</div>
 </div>
 
-div class="b">
+<div class="b">
 	<div class="container">
 	<4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</4>
 	</div>
