--- a/cdc.html
+++ b/cdc.html
@@ -3,7 +3,8 @@
 <html>
 	
 	<head>
-    <meta charset="UTF-8">
+	<title>Techno Rois</title>
+    <meta charset="UTF-8"
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
 	<link rel="icon" href="logo.png" />
