--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <ul class="nav nav-tabs">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="robot.html">Robot</a></li>
-		  <li><a href="program.html">Programmation</a></li>
+	  <li><a href="program.html">Programmation</a></li>
           <li><a href="logo.html">Animation 3D</a></li>
           <li><a href="tarif.html">Tarifs</a></li>
           <li><a href="contact.html">Contactez-Nous</a></li>
           <li><a href="dons.html">Dons</a></li>
-          <li><a href="technoroi.html">Techno Roi</a></li>
-		  <li><a href="forms.html">Formulaires</a></li>
+	  <li><a href="technorois.html">Techno Rois</a></li>		  
+	  <li><a href="forms.html">Formulaires</a></li>
 		  <li><a href="concours.html">Concours</a><li>
 		  <li><a href="https://twitter.com/technorois"target="_blank"><image src="twitter1.png" </img></a></li>
 		</ul>
