--- a/program.html
+++ b/program.html
@@ -24,7 +24,7 @@
           <li><a href="tarif.html">Tarifs</a></li>
           <li><a href="contact.html">Contactez-Nous</a></li>
           <li><a href="dons.html">Dons</a></li>
-          <li><a href="technoroi.html">Techno Roi</a></li>
+          <li><a href="technorois.html">Techno Rois</a></li>
 		  <li><a href="forms.html">Formulaires</a></li>
 		  <li><a href="concours.html">Concours</a><li>
 	 <li><a href="https://twitter.com/technorois"target="_blank"><image src="twitter1.png" </img></a></li>
