--- a/program.html
+++ b/program.html
@@ -43,7 +43,7 @@
 
 <div class="b">
 	<div class="container">
-	<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
+	<h4>Le site web a été créé par Arthur Fétiveau et Nathaniel Martin-Poirier, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
 	
 	</div>		
 </div>
