--- a/tarif.html
+++ b/tarif.html
@@ -42,7 +42,7 @@
 
 <div class="a">
 	<div class="container">
-		<h4>Le site web a été créé par Arthur Fétiveau, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
+		<h4>Le site web a été créé par Arthur Fétiveau et Nathaniel Martin-Poirier, Pour tout problemes sur le site, contactez : support@technorois.ca</h4>
 
 	</div>
 </div>
