--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 
   <head>
+  	<script type="text/javascript">
+  <!--
+  if (screen.width <= 800) {
+    window.location = "http://m.domain.com";
+  }
+  //-->
+</script>
   	<title>Techno Rois</title>
       <meta charset="UTF-8">
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
