--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   	<script type="text/javascript">
   <!--
   if (screen.width <= 800) {
-    window.location = "http://m.domain.com";
+    window.location = "http://m.technorois.ca";
   }
   //-->
 </script>
